updated sh, .gitignore